--- a/src/pages/League/League.css
+++ b/src/pages/League/League.css
@@ -10,7 +10,7 @@
     align-items: center;
     border-radius: 5px;
     height: 80px;
-    width: 200px;
+    width: 350px;
     padding-left: 5px;
 }
 
@@ -30,4 +30,9 @@
 
 .avatarThumbnail {
     height: 40px;
+    border-radius: 50%;
+}
+
+.dropdownArrow {
+    margin-left: auto;
 }
