--- a/src/pages/Team/TeamPreview/TeamPreview.css
+++ b/src/pages/Team/TeamPreview/TeamPreview.css
@@ -7,3 +7,21 @@
     height: 40px;
     border-radius: 50%;
 }
+
+.teamPreviewHeader {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 5px;
+    height: 80px;
+    width: 350px;
+    padding-left: 5px;
+}
+
+.teamPreviewHeader.even {
+    background-color: lightblue;
+}
+
+.teamPreviewHeader.odd {
+    background-color: lightcyan;
+}
