--- a/src/pages/Player/PlayerPage.module.css
+++ b/src/pages/Player/PlayerPage.module.css
@@ -1,10 +1,22 @@
-.playerPage {
+.playerProfile {
+    align-self: center;
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .headshot {
     border-radius: 50%;
     max-height: 150px;
+}
+
+.playerPage {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.flexSpace {
+    flex: 1;
 }
