--- a/src/components/Team/TeamPage/TeamPage.module.css
+++ b/src/components/Team/TeamPage/TeamPage.module.css
@@ -25,3 +25,15 @@
     font-size: larger;
     font-weight: bold;
 }
+
+.menuWrapper {
+    display: flex;
+    width: 100%;
+}
+
+.flexSpace {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
