--- a/src/components/Player/Search/PlayerSearch.module.css
+++ b/src/components/Player/Search/PlayerSearch.module.css
@@ -11,3 +11,15 @@
 .searchResultRow {
     cursor: pointer;
 }
+
+.menuWrapper {
+    display: flex;
+    width: 100%;
+}
+
+.flexSpace {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
