--- a/src/components/League/League.module.css
+++ b/src/components/League/League.module.css
@@ -8,3 +8,20 @@
     margin: 4px;
     max-width: 780px;
 }
+
+.menuWrapper {
+    display: flex;
+    width: 100%;
+}
+
+.leagueName {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.flexSpace {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
