--- a/src/components/NflTeam/NflTeam.module.css
+++ b/src/components/NflTeam/NflTeam.module.css
@@ -3,3 +3,16 @@
     flex-direction: column;
     align-items: center;
 }
+
+.menuWrapper {
+    display: flex;
+    width: 100%;
+}
+
+
+.flexSpace {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
