--- a/src/components/Transactions/AllTransactions.module.css
+++ b/src/components/Transactions/AllTransactions.module.css
@@ -1,5 +1,11 @@
 .singleton {
-    margin: 20px;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    border-radius: 4px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .menuWrapper {
@@ -12,4 +18,17 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+}
+
+.teamLabel {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 4px;
+    background-color: antiquewhite;
+}
+
+.teamLabel.notFirst {
+    margin-top: 10px;
 }
