--- a/src/components/Player/PlayerPreview/PlayerPreview.module.css
+++ b/src/components/Player/PlayerPreview/PlayerPreview.module.css
@@ -7,9 +7,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    align-content: center;
+    justify-content: center;
     margin: 1px;
     border-radius: 4px;
+    width: 240px;
 }
 
 .clickable {
