--- a/src/components/Team/TeamPage/TeamPage.module.css
+++ b/src/components/Team/TeamPage/TeamPage.module.css
@@ -37,3 +37,15 @@
     flex-direction: column;
     align-items: flex-end;
 }
+
+.starterRow {
+    display: flex;
+    align-items: center;
+}
+
+.starterPosition {
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
