--- a/src/components/Player/PlayerPreview/PlayerPreview.module.css
+++ b/src/components/Player/PlayerPreview/PlayerPreview.module.css
@@ -11,6 +11,9 @@
     margin: 1px;
     border-radius: 4px;
     width: 240px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: clip;
 }
 
 .clickable {
