names showing up

--- a/src/components/Blueprint/BlueprintGenerator/BlueprintGenerator.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/BlueprintGenerator.module.css
@@ -30,19 +30,19 @@
     box-shadow: -4px 4px #213965;
 }
 
-.qb {
+.QB {
     background-color: #EC336D;
 }
 
-.rb {
+.RB {
     background-color: #3DBCB1;
 }
 
-.wr {
+.WR {
     background-color: #3CB6E9;
 }
 
-.te {
+.TE {
     background-color: #FBAD5B;
 }
 
