--- a/src/components/Blueprint/BlueprintGenerator/modules/looktotrade/LookToTradeModule.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/looktotrade/LookToTradeModule.module.css
@@ -9,12 +9,13 @@
     font-size: 36px;
     width: 420px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .suggestion {
     font-size: 32px;
     margin-left: 24px;
-    margin-top: 20px;
+    margin-bottom: 42px;
 }
 
 .whiteBullet {
@@ -34,5 +35,5 @@
     text-align: center;
     box-shadow: -4px 4px #213965;
     padding: /* top/bottom = */ 6px;
-    margin: 8px 18px 8px 36px;
+    margin: 8px 40px 8px 36px;
 }
