--- a/src/components/Blueprint/BlueprintGenerator/modules/playerstotarget/PlayersToTargetModule.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/playerstotarget/PlayersToTargetModule.module.css
@@ -58,5 +58,5 @@
     background-color: white;
     border-radius: 50%;
     margin-left: -10px;
-    border: darkblue 2px solid;
+    border: #103762 2px solid;
 }
