settings component in new url

--- a/src/components/Blueprint/BlueprintGenerator/modules/settings/Settings.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/settings/Settings.module.css
@@ -1,3 +1,9 @@
+.settingsBody {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+}
+
 .otherSettings {
     margin-top: 20px;
 }
