make rookie picks targettable

--- a/src/components/Blueprint/BlueprintGenerator/modules/playerstotarget/PlayersToTargetModule.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/playerstotarget/PlayersToTargetModule.module.css
@@ -54,6 +54,14 @@
     background-color: #FBAD5B;
 }
 
+.RP {
+    background-color: #8d807d;
+}
+
+.rookiePickTarget {
+    padding-left: 42px;
+}
+
 .teamLogo {
     height: 50px;
     background-color: white;
