--- a/src/components/Blueprint/BlueprintGenerator/modules/PositionalGrades/PositionalGrades.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/PositionalGrades/PositionalGrades.module.css
@@ -6,6 +6,11 @@
     justify-content: space-between;
 }
 
+.column {
+    display: flex;
+    flex-direction: column;
+}
+
 .scaleAndSlider {
     position: relative;
     width: 112px;
@@ -21,4 +26,28 @@
     width: 100%;
     left: 4px;
     bottom: 0;
+}
+
+.chip {
+    align-self: center;
+    font-family: 'Antarctican Headline';
+    font-size: 40px;
+    color: white;
+    padding: /* top/bottom = */ 4px /* left/right = */ 0px ;
+    border-radius: 12px;
+}
+.QB{
+    background-color: #EC336D;
+}
+
+.RB {
+    background-color: #3DBCB1;
+}
+
+.WR {
+    background-color: #3CB6E9;
+}
+
+.TE {
+    background-color: #FBAD5B;
 }
