--- a/src/components/Blueprint/BlueprintGenerator/modules/PositionalGrades/PositionalGrades.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/PositionalGrades/PositionalGrades.module.css
@@ -1,9 +1,10 @@
 .graphicComponent {
     background-color: #005D91;
-    padding: 35px 10px 35px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 35px 10px;
+    width: 105%
 }
 
 .column {
@@ -13,30 +14,49 @@
 
 .scaleAndSlider {
     position: relative;
-    width: 112px;
+    width: 140px;
 }
+
 .scale {
-    width: 100%;
-    height: 100%;
+    box-shadow: -6px 6px #213965;
+    margin-left: 10%;
     object-fit: cover;
+    width: 80%;
 }
 
 .slider {
     position: absolute;
-    width: 100%;
-    left: 4px;
+    width: 90%;
+    left: 5%;
     bottom: 0;
 }
 
 .chip {
     align-self: center;
-    font-family: 'Antarctican Headline';
-    font-size: 40px;
-    color: white;
-    padding: /* top/bottom = */ 4px /* left/right = */ 0px ;
     border-radius: 12px;
+    box-shadow: 0 -6px white;
+    color: white;
+    font-family: 'Antarctican Headline';
+    font-size: 60px;
+    margin-top: 32px;
+    padding: /* top/bottom = */ 4px /* left/right = */ 0px ;
+    text-align: center;
+    width: 100%;
 }
-.QB{
+
+.grade {
+    color: white;
+    font-family: 'Prohibition Test';
+    font-size: 28px;
+    margin-top: 8px;
+    text-align: center;
+}
+
+.slash {
+    font-weight: bolder;
+}
+
+.QB {
     background-color: #EC336D;
 }
 
