--- a/src/components/Blueprint/BlueprintGenerator/BlueprintGenerator.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/BlueprintGenerator.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 20px;
-    width: 800px;
+    width: 1000px;
 }
 
 .allModules {
@@ -21,4 +21,10 @@
 .inputModule {
     display: flex;
     flex-direction: column;
+}
+
+.extraInfo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
