--- a/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
@@ -12,3 +12,10 @@
     top: 410px;
     scale: 1.55;
 }
+
+.startersGraphic {
+    position: absolute;
+    left: 200px;
+    top: 885px;
+    scale: 1;
+}
