--- a/src/components/Blueprint/BlueprintGenerator/modules/looktotrade/LookToTradeModule.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/looktotrade/LookToTradeModule.module.css
@@ -1,8 +1,11 @@
 .graphicComponent {
-    background-color: #005D91;
     width: fit-content;
     color: white;
     padding-bottom: 20px;
+}
+
+.background {
+    background-color: #005D91;
 }
 
 .title {
