--- a/src/components/Blueprint/BlueprintGenerator/modules/DepthScore/DepthScore.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/DepthScore/DepthScore.module.css
@@ -1,11 +1,14 @@
 .graphicComponent {
-    background-color: #005D91;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 400px;
+}
+
+.background {
+    background-color: #005D91;
 }
 
 .title {
