--- a/src/components/Blueprint/BlueprintGenerator/modules/PositionalGrades/PositionalGrades.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/PositionalGrades/PositionalGrades.module.css
@@ -1,10 +1,13 @@
 .graphicComponent {
-    background-color: #005D91;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 35px 10px;
     width: 105%
+}
+
+.background {
+    background-color: #005D91;
 }
 
 .column {
