--- a/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
@@ -19,3 +19,10 @@
     top: 885px;
     scale: 1;
 }
+
+.cornerstoneGraphic {
+    position: absolute;
+    left: 1292px;
+    top: 1310px;
+    scale: 1.68;
+}
