--- a/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
@@ -26,3 +26,10 @@
     top: 1310px;
     scale: 1.68;
 }
+
+.depthScoreGraphic {
+    position: absolute;
+    left: 1082px;
+    top: 835px;
+    scale: 1.45;
+}
