--- a/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
@@ -40,3 +40,10 @@
     top: 1725px;
     scale: 1.22;
 }
+
+.positionalGradesGraphic {
+    position: absolute;
+    left: 310px;
+    top: 2525px;
+    scale: 1.2;
+}
