--- a/src/components/Blueprint/BlueprintGenerator/modules/PositionalGrades/PositionalGrades.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/PositionalGrades/PositionalGrades.module.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 35px 10px;
-    width: 105%
+    width: 840px;
 }
 
 .background {
