--- a/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
@@ -47,3 +47,10 @@
     top: 2525px;
     scale: 1.2;
 }
+
+.lookToTradeGraphic {
+    position: absolute;
+    left: 1117px;
+    top: 1675px;
+    scale: 1.35;
+}
