--- a/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
@@ -65,6 +65,15 @@
     text-shadow: -6px 6px #213965;;
 }
 
+.smallerTeamName {
+    font-size: 120px;
+}
+
+.smallestTeamName {
+    font-size: 90px;
+    top: 80px;
+}
+
 .offScreen {
     position: absolute;
     left: -9999px;
