able to add comments

--- a/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
@@ -230,3 +230,15 @@
     width: 880px;
     text-align: center;
 }
+
+.commentsGraphic {
+    position: absolute;
+
+    top: 2857.39px;
+    left: 1377.75px;
+    color: white;
+
+    font-family: 'Acumin Pro';
+    font-weight: lighter;
+    font-size: 25px;
+}
