--- a/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
+++ b/src/components/Blueprint/BlueprintGenerator/modules/BigBoy/BigBoy.module.css
@@ -254,3 +254,20 @@
     flex-direction: row;
     gap: 8px;
 }
+
+.rosterPlayer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 2px;
+}
+
+.positionColumn {
+    width: 140px;
+}
+
+.fullRoster {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
