--- a/src/components/Blueprint/v2/modules/RosterModule/RosterModule.module.css
+++ b/src/components/Blueprint/v2/modules/RosterModule/RosterModule.module.css
@@ -9,7 +9,8 @@
 }
 
 .positionColumn {
-    width: 220px;
+    width: 175px;
+        padding: 15px;
 }
 
 .positionHeader {
@@ -24,9 +25,13 @@
 .fullRoster {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 35px;
+        width: fit-content;
 
     background-color: #005D91;
+    /* position: absolute;
+                left: 70px;
+                top: 330px; */
 }
 
 .postionalRank {
