--- a/src/components/Blueprint/v2/modules/CornerstonesModule/CornerstonesModule.module.css
+++ b/src/components/Blueprint/v2/modules/CornerstonesModule/CornerstonesModule.module.css
@@ -4,8 +4,17 @@
     position: relative;
     width: 500px;
     height: 250px;
+    overflow: hidden;
 }
 
+.teamLogo {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    /* width: 100%; */
+    height: 110%;
+    opacity: 0.3;
+}
 .headshot {
     position: absolute;
     bottom: 0;
