--- a/src/components/Blueprint/v2/modules/CornerstonesModule/CornerstonesModule.module.css
+++ b/src/components/Blueprint/v2/modules/CornerstonesModule/CornerstonesModule.module.css
@@ -27,8 +27,10 @@
 .headshot {
     position: absolute;
     bottom: 0;
-    left: 0;
+    left: 40px;
     height: 100%;
+    object-fit: cover;
+        aspect-ratio: 1 / 1;
 }
 
 .positionalAdp {
