--- a/src/components/Blueprint/v2/modules/SuggestedMovesModule/SuggestedMovesModule.module.css
+++ b/src/components/Blueprint/v2/modules/SuggestedMovesModule/SuggestedMovesModule.module.css
@@ -53,6 +53,24 @@
     padding-top: 5px;
 }
 
+.buyTileContainer {
+    position: relative;
+    width: 622px;
+    height: 162px;
+}
+
+.buyTileColumn {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+
+    height: 100%;
+
+    position: absolute;
+    right: 0;
+    top: 0;
+}
 
 .buyTile {
     display: flex;
@@ -85,4 +103,24 @@
         font-size: 20px;
         line-height: 0.9;
     }
+}
+
+.playerImg {
+    background-color: white;
+    position: absolute;
+    left: 50px;
+    height: 100%;
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
+
+    border-radius: 50%;
+}
+
+.buyLabel {
+    font-family: 'Prohibition Test';
+    font-size: 24px;
+
+    position: absolute;
+    right: 4px;
+    top: 28px;
 }
