--- a/src/components/Rankings/Rankings.module.css
+++ b/src/components/Rankings/Rankings.module.css
@@ -33,3 +33,59 @@
 .playerName {
     cursor: pointer;
 }
+
+.playerCard {
+    position: relative;
+    width: 250px;
+
+    overflow: hidden;
+
+    .background {
+        width: 100%;
+    }
+
+    .headshot {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        aspect-ratio: 1 / 1;
+        width: 100%;
+        object-fit: cover;
+
+
+        filter: drop-shadow(5px 5px 5px black);
+    }
+
+    .opponent {
+        position: absolute;
+        top: 4px;
+        left: 4px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 60px;
+
+        .opponentLogo {
+            width: 100%;
+        }
+
+        font-family: 'Prohibition Test';
+        font-size: 19px;
+        color: #f9f5e5;
+    }
+
+    .playerCardName {
+        position: absolute;
+        bottom: 10px;
+        left: 0;
+
+        width: 100%;
+        text-align: center;
+
+        font-family: 'Prohibition Test';
+        font-size: 28px;
+        color: #f9f5e5;
+        -webkit-text-stroke: 0.5px #010101;
+    }
+}
