--- a/src/components/Rankings/Rankings.module.css
+++ b/src/components/Rankings/Rankings.module.css
@@ -76,18 +76,27 @@
         color: #f9f5e5;
     }
 
-    .playerCardName {
+    .playerCardNameWrapper {
         position: absolute;
-        bottom: 10px;
+        bottom: 0;
         left: 0;
-
         width: 100%;
-        text-align: center;
 
+        background-color: rgb(1, 1, 1, 0.75);
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .playerCardName {
         font-family: 'Prohibition Test';
         font-size: 28px;
         color: #f9f5e5;
-        -webkit-text-stroke: 0.5px #010101;
+        
+        padding-top: 5px;
+        padding-bottom: 10px;
+        /* -webkit-text-stroke: 0.5px #010101; */
     }
 }
 
