--- a/src/components/Rankings/Rankings.module.css
+++ b/src/components/Rankings/Rankings.module.css
@@ -93,10 +93,19 @@
         font-family: 'Prohibition Test';
         font-size: 28px;
         color: #f9f5e5;
-        
+
         padding-top: 5px;
         padding-bottom: 10px;
-        /* -webkit-text-stroke: 0.5px #010101; */
+        }
+        
+        .playerRank {
+            position: absolute;
+            top: 10px;
+            right: 16px;
+            font-family: 'Prohibition Test';
+            -webkit-text-stroke: 0.5px #010101;
+            font-size: 36px;
+            color: #f9f5e5;
     }
 }
 
