--- a/src/components/Blueprint/v2/modules/SuggestedMovesModule/SuggestedMovesModule.module.css
+++ b/src/components/Blueprint/v2/modules/SuggestedMovesModule/SuggestedMovesModule.module.css
@@ -50,11 +50,11 @@
 }
 
 .sellLabelCol {
-    font-family: 'Prohibition Test';
+    font-family: 'Erbaum';
     font-size: 24px;
     line-height: 0.9;
 
-    width: 70px;
+    width: 140px;
     height: 100%;
 
     display: flex;
@@ -65,8 +65,14 @@
 .sellLabel {
     padding-left: 5px;
     padding-top: 5px;
+display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
+.sellIcon {
+    width: 30px;
+}
 .buyTileContainer {
     position: relative;
     width: 622px;
@@ -131,10 +137,13 @@
 }
 
 .buyLabel {
-    font-family: 'Prohibition Test';
+    font-family: 'Erbaum';
     font-size: 24px;
 
     position: absolute;
     right: 4px;
     top: 28px;
+display: flex;
+    flex-direction: row;
+    align-items: center;
 }
