--- a/src/components/Blueprint/v2/modules/CornerstonesModule/CornerstonesModule.module.css
+++ b/src/components/Blueprint/v2/modules/CornerstonesModule/CornerstonesModule.module.css
@@ -36,7 +36,7 @@
 .positionalAdp {
     position: absolute;
 
-    font-family: 'Prohibition Test';
+    font-family: 'Prohibition';
     line-height: 0.9;
     font-size: 20px;
     padding: 6px;
@@ -64,7 +64,7 @@
 }
 
 .lastName {
-    font-family: 'Prohibition Test';
+    font-family: 'Prohibition';
     font-size: 52px;
 
     line-height: 0.9;
@@ -74,7 +74,7 @@
 
 .teamName,
 .number {
-    font-family: 'Prohibition Test';
+    font-family: 'Prohibition';
     font-size: 20px;
 
     font-style: oblique;
