--- a/src/components/Blueprint/v2/modules/RosterModule/RosterModule.module.css
+++ b/src/components/Blueprint/v2/modules/RosterModule/RosterModule.module.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     gap: 2px;
 
-    font-family: 'Prohibition Test';
+    font-family: 'Prohibition';
     color: white;
 }
 
@@ -26,14 +26,11 @@
     display: flex;
     flex-direction: row;
     gap: 35px;
-        width: fit-content;
+    width: fit-content;
 
     background-color: #005D91;
-    /* position: absolute;
-                left: 70px;
-                top: 330px; */
 }
 
 .postionalRank {
-    font-family: 'Prohibition Test';
+    font-family: 'Prohibition';
 }
