--- a/src/components/Blueprint/v2/modules/HoldsModule/HoldsModule.module.css
+++ b/src/components/Blueprint/v2/modules/HoldsModule/HoldsModule.module.css
@@ -21,7 +21,9 @@
 
     width: 80%;
     height: 106px;
+    text-overflow: clip;
 
+    overflow: hidden;
     display: flex;
     align-items: center;
 
